# lint_coding_agent

./: .dockerignore  .env  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
openenv_lint_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: QUESTIONS.JSON  __init__.py  app.py  lint_coding_agent_environment.py
server/templates/level_1/: README.md  main.py
server/templates/level_1/app/: core.py  main.py
server/templates/level_10/: middleware.py
server/templates/level_11/: handler.py  orchestrator.py
server/templates/level_12/: deployer.py  mcp_config.json
server/templates/level_13/: ai_client.py  requirenments.txt
server/templates/level_14/: auth.py  session.py
server/templates/level_15/: backend_config.yaml  deploynment_log.txt  infra_manifest.json
server/templates/level_2/: main.js
server/templates/level_3/: processor.py  test_logic.py
server/templates/level_4/: main.cpp  shapes.h  utils.h
server/templates/level_5/com/security/: AuthService.java
server/templates/level_5/com/tests/: SecurityTest.java
server/templates/level_6/: models.py  view.py
server/templates/level_7/: main.rs
server/templates/level_8/: InfiniteScroll.js
server/templates/level_9/: processor.go
